--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -6,7 +6,7 @@ body {
 
 .container {
   max-width: 320px;
-  padding: 15px 0;
+  padding: 0 15px;
   margin: 0 auto;
 
   @media (min-width: $tablet) {
