--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -45,11 +45,24 @@ h2,
 h3,
 h4,
 p {
-  margin-top: 0;
+  margin: 0;
 }
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.button {
+  width: 158px;
+  height: 45px;
+
+  font-size: 24px;
+  line-height: 2.71;
+  text-align: center;
+
+  border-radius: 25px;
+  color: var(--button-text-color);
+  background-color: var(--button-background-color);
 }
