html for header, mobile menu

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,7 +1,10 @@
 .container {
   max-width: 320px;
-  padding: 15px 0;
+  padding: 0 15px;
   margin: 0 auto;
+
+  // background-color: aqua;
+
 
   @media (min-width: $tablet) {
     width: $tablet;
@@ -10,6 +13,10 @@
     width: $pc;
   }
 }
+
+// body {
+//   font-family: Monserrat, sans-serif;
+// }
 
 a {
   text-decoration: none;
