Header and Hero
Коррекция margin, container и его переходы

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -25,30 +25,6 @@
   --grid-num: 2;
 }
 
-/* montserrat-regular */
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  src: url("../../fonts/Montserrat/Montserrat-Regular.ttf") format("truetype");
-}
-
-/* montserrat-medium */
-@font-face {
-  font-family: 'Montserrat';
-  font-style: medium;
-  font-weight: 500;
-  src: url("../../fonts/Montserrat/Montserrat-Medium.ttf") format("truetype");
-}
-
-/* caveatbrush-regular */
-@font-face {
-  font-family: 'CaveatBrush';
-  font-style: normal;
-  font-weight: 400;
-  src: url("../../fonts/CaveatBrush/CaveatBrush-Regular.ttf") format("truetype");
-}
-
 body {
   background-color: #ffffff;
   color: #2e2520;
@@ -96,13 +72,24 @@ h2,
 h3,
 h4,
 p {
-  margin-top: 0;
+  margin: 0;
 }
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.button {
+  width: 158px;
+  height: 45px;
+  font-size: 24px;
+  line-height: 2.71;
+  text-align: center;
+  color: var(--button-text-color);
+  background-color: var(--button-background-color);
+  border-radius: 25px;
 }
 
 .container {
@@ -112,13 +99,13 @@ img {
   padding: 0 15px;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 767.98px) {
   .container {
-    width: 320px;
+    width: 480px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1279.98px) {
   .container {
     width: 664px;
   }
@@ -139,6 +126,164 @@ img {
 @media screen and (min-width: 1200px) {
   .title {
     font-size: 36px;
+  }
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 767.98px) {
+  .header--logo-center {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header > picture {
+    margin-right: 40px;
+  }
+}
+
+.header_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media screen and (max-width: 1279.98px) {
+  .header_list {
+    display: none;
+  }
+}
+
+.header_link:not(:last-child) {
+  margin-right: 20px;
+}
+
+.section-hero {
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279.98px) {
+  .section-hero {
+    margin-top: 10px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .section-hero {
+    margin-top: 55px;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .container_hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.hero_title {
+  max-width: 490px;
+  margin-bottom: 15px;
+  font-size: 64px;
+  line-height: 1.02;
+}
+
+@media screen and (max-width: 1279.98px) {
+  .hero_title {
+    max-width: 224px;
+    margin-bottom: 3px;
+    font-size: 30px;
+    line-height: 38px;
+    text-align: center;
+  }
+}
+
+.hero_text {
+  margin-bottom: 30px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.21;
+}
+
+@media screen and (max-width: 767.98px) {
+  .hero_text {
+    margin-bottom: 35px;
+    font-size: 16px;
+    line-height: 1.25;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279.98px) {
+  .hero_text {
+    margin-bottom: 25px;
+    font-size: 16px;
+    line-height: 1.25;
+  }
+}
+
+.hero_icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 25px;
+  height: 20px;
+}
+
+@media screen and (max-width: 1279.98px) {
+  .hero_icon {
+    width: 19px;
+    height: 15px;
+  }
+}
+
+.hero_btn {
+  margin-bottom: 65px;
+}
+
+@media screen and (max-width: 767.98px) {
+  .hero_btn {
+    margin-bottom: 45px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279.98px) {
+  .hero_btn {
+    margin-bottom: 30px;
+  }
+}
+
+.hero_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.hero_item:not(:last-child) {
+  margin-right: 12px;
+}
+
+@media screen and (max-width: 1279.98px) {
+  .hero_item:not(:last-child) {
+    margin-right: 10px;
   }
 }
 /*# sourceMappingURL=main.css.map */
