--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -45,22 +45,11 @@ h2,
 h3,
 h4,
 p {
-  margin: 0;
+  margin-top: 0;
 }
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
-}
-
-.button {
-  width: 158px;
-  height: 45px;
-  font-size: 24px;
-  line-height: 2.71;
-  text-align: center;
-  color: var(--button-text-color);
-  background-color: var(--button-background-color);
-  border-radius: 25px;
 }
