--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -3,7 +3,7 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    src: url('../../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
+    src: url('/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
   }
 
   /* montserrat-medium */
@@ -11,7 +11,7 @@
   font-family: 'Montserrat';
   font-style: medium;
   font-weight: 500;
-  src: url('../../fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
+  src: url('/fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
 }
 
 /* caveatbrush-regular */
@@ -19,5 +19,5 @@
   font-family: 'CaveatBrush';
   font-style: normal;
   font-weight: 400;
-  src: url('../../fonts/CaveatBrush/CaveatBrush-Regular.ttf') format('truetype');
+  src: url('/fonts/CaveatBrush/CaveatBrush-Regular.ttf') format('truetype');
 }
