Добавляет стили в program-details для мобильной версии

--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -21,29 +21,31 @@
         <div class="container-program__item">
         <ul class="program-details__list">
             <li class="program-details__item">
-                <span>Type of the event</span>
-                <p>Cooking classes</p>
+                
+                <span class="program-details__title">Type of the event</span>
+                <p class="program-details__text">Cooking classes</p>
                 <svg class="icon" width="19.42" height="18.01">
                    <use href="./images/symbol-defs.svg#icon-chef-hat"></use>
                </svg>
+           
            </li>
             <li class="program-details__item">
-                <span>Number of guests</span>
-                <p>1 to 20</p>
+                <span class="program-details__title">Number of guests</span>
+                <p class="program-details__text">1 to 20</p>
                 <svg class="icon" width="20.32" height="18.26">
                     <use href="./images/symbol-defs.svg#icon-people"></use>
                 </svg>
            </li>
             <li class="program-details__item">
-                <span>Time of the event</span>
-                <p>18:30 (2.5 hours)</p>
+                <span class="program-details__title">Time of the event</span>
+                <p class="program-details__text">18:30 (2.5 hours)</p>
                 <svg class="icon" width="19.72" height="19.72">
                     <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
             </li>
             <li class="program-details__item">
-                <span>The host speaks</span>
-                <p>English, French</p>
+                <span class="program-details__title">The host speaks</span>
+                <p class="program-details__text">English, French</p>
                 <svg class="icon" width="24.83" height="16.8">
                     <use href="./images/symbol-defs.svg#icon-chat"></use>
                 </svg>
