--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -5,7 +5,7 @@
   padding: 0 15px;
 
   @media screen and (max-width: 767.98px) {
-    width: 480px;
+    max-width: 480px;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1279.98px) {
