Top-part background-image

--- a/src/sass/layouts/_top-part.scss
+++ b/src/sass/layouts/_top-part.scss
@@ -1,3 +1,34 @@
 .top-part {
-  
+  background-image: url('/images/mobile/background/bg.png');
+  background-repeat: no-repeat;
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url('/images/mobile/background/bg@2x.png');
+    }
+
+    @media screen and(min-width: 769px) {
+      background-image: url("/images/tablet/background/bg.png");
+
+      @media (min-device-pixel-ratio: 2),
+        (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: url("/images/tablet/background/bg@2x.png");
+      }
+    }
+    
+    @media screen and(min-width: 1280px) {
+      background-image: url("/images/desktop/background/bg.png");
+
+      @media (min-device-pixel-ratio: 2),
+        (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: url("/images/desktop/background/bg@2x.png");
+      }
+    }
+
 }
