header and menu for tablet

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,19 +1,24 @@
 
 .page-nav__container {
     padding-top: 7px;
+
+    @media screen and (min-width: $tablet) {
+        padding-top: 27px;
+    }
 }
 
 .page-nav--position {
     position: relative;
+
+    @media screen and (min-width: $tablet) {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
 }
 
 .mobile-menu__button { 
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
     z-index: 150; 
-
     margin: 0;
     padding: 0;
     border: none;
@@ -22,7 +27,15 @@
     &:hover {
         fill: #876655;
     }
+
+    @media screen and (max-width: 767.98px) {
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+    }
 }
+
 
 .mobile-menu__button .mobile-menu_icon-close {
     display: none;
