--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -1,11 +1,13 @@
 .logo__icon {
     width: 96px;
-    height: 43px;  
+    height: 43px;
 }
 
-.logo--position {
-    display: block;
-    text-align: center;
+@media screen and (max-width: 767.98px) {
+    .logo--position {
+        display: block;
+        text-align: center;
+    }
 }
 
 .logo__icon--mobile {
