--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    max-width: $mobile;
+    // max-width: $mobile;
     height: 100vh;
     z-index: 120;
 
@@ -29,7 +29,7 @@
 
     &:hover,
     &:focus {
-        color: #876655;
+        color: $hover;
     }
 }
 
@@ -42,6 +42,10 @@
 
     &:first-child {
         margin-top: 40px;
+    }
+
+    @media screen and (min-width: $tablet) {
+        margin-bottom: 40px;
     }
 }
 
