--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -13,7 +13,7 @@ body {
 
 
   @media (min-width: $tablet) {
-    width: $tablet;
+    max-width: $tablet;
   }
   @media (min-width: $pc) {
     width: $pc;
