Format header.html

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,14 @@
- <header>
-        <div class="container header header--logo-center">
-            <picture>
-                <source srcset="/src/images/desktop/logo/logo.png 1x, /src/images/desktop/logo/logo@2x.png 2x">
-                <img src="/src/images/desktop/logo/logo.png" alt="">
-            </picture>
-            <ul class="list header_list">
-                <li class="header_link"><a href="#about">About us</a></li>
-                <li class="header_link"><a href="#program">Program</a></li>
-                <li class="header_link"><a href="#reviews">Reviews</a></li>
-                <li class="header_link"><a href="#contacts">Contacts</a></li>
-            </ul>
-        </div>
-    </header>
+<header class="header">
+  <div class="container header header--logo-center">
+    <picture>
+      <source srcset="/images/desktop/logo/logo.png 1x, /images/desktop/logo/logo@2x.png 2x" />
+      <img src="/images/desktop/logo/logo.png" alt="" />
+    </picture>
+    <ul class="list header_list">
+      <li class="header_link"><a href="#about">About us</a></li>
+      <li class="header_link"><a href="#program">Program</a></li>
+      <li class="header_link"><a href="#reviews">Reviews</a></li>
+      <li class="header_link"><a href="#contacts">Contacts</a></li>
+    </ul>
+  </div>
+</header>
