--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,28 +1,30 @@
-<section class="section-hero">
-        <div class="container container_hero">
-            <h1 class="hero_title">Donut Masterclass
-                with the Donut King</h1>
-            <p class="hero_text">Hosted by Eva Green</p>
-            <button class="button hero_btn">Register</button>
-            <ul class="list hero_list">
-                <li class="hero_item"><a class="hero_icon" href="">
-                    <svg>
-                        <use href="../images/sprite/sprite.svg#icon-twitter"></use>
-                    </svg>
-                    </a>
-                </li>
-                <li class="hero_item"><a class="hero_icon" href="">
-                    <svg>
-                        <use href="../images/sprite/sprite.svg#icon-instagram"></use>
-                    </svg>                                                            
-                    </a>
-                </li>
-                <li class="hero_item"><a class="hero_icon" href="">
-                    <svg>
-                        <use href="../images/sprite/sprite.svg#icon-facebook"></use>
-                    </svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </section>
+<section class="hero">
+  <div class="container container_hero">
+    <h1 class="hero_title">Donut Masterclass with the Donut King</h1>
+    <p class="hero_text">Hosted by Eva Green</p>
+    <button class="button hero_btn">Register</button>
+    <ul class="list hero_list">
+      <li class="hero_item">
+        <a class="hero_icon" href="">
+          <svg>
+            <use href="/images/sprite/sprite.svg#icon-twitter"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="hero_item">
+        <a class="hero_icon" href="">
+          <svg>
+            <use href="/images/sprite/sprite.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="hero_item">
+        <a class="hero_icon" href="">
+          <svg>
+            <use href="/images/sprite/sprite.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+</section>
