--- a/src/sass/layouts/_top-part.scss
+++ b/src/sass/layouts/_top-part.scss
@@ -1,34 +1,36 @@
 .top-part {
   background-image: url('/images/mobile/background/bg.png');
+  background-size: 100% 461px;
   background-repeat: no-repeat;
+
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url('/images/mobile/background/bg@2x.png');
+  }
+
+  @media screen and(min-width: 769px) {
+    background-image: url('/images/tablet/background/bg.png');
+    background-size: 100% 622px;
 
     @media (min-device-pixel-ratio: 2),
       (-webkit-min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: url('/images/mobile/background/bg@2x.png');
+      background-image: url('/images/tablet/background/bg@2x.png');
     }
+  }
 
-    @media screen and(min-width: 769px) {
-      background-image: url("/images/tablet/background/bg.png");
+  @media screen and(min-width: 1280px) {
+    background-image: url('/images/desktop/background/bg.png');
+    background-size: 100% 1036px;
 
-      @media (min-device-pixel-ratio: 2),
-        (-webkit-min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-        background-image: url("/images/tablet/background/bg@2x.png");
-      }
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url('/images/desktop/background/bg@2x.png');
     }
-    
-    @media screen and(min-width: 1280px) {
-      background-image: url("/images/desktop/background/bg.png");
-
-      @media (min-device-pixel-ratio: 2),
-        (-webkit-min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-        background-image: url("/images/desktop/background/bg@2x.png");
-      }
-    }
-
+  }
 }
