--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import './components/mobile-menu';
 @import './components/contact-form';
 @import './layouts/top-part';
+@import './layouts/bottom-part';
 @import './layouts/header';
 @import './layouts/hero';
 @import './layouts/about';
