--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,4 +1,7 @@
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 158px;
   height: 45px;
   font-size: 24px;
