--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -1,4 +1,41 @@
 body {
+  height: 3526px;
   padding-left: 5px;
   padding-right: 5px;
+  background-color: var(--bg-color);
+  background-image: url(../images/background/mobile/hero-mobile-donut@1x.png),
+    url(../images/background/mobile/mobile-bg-top@1x.png),
+    url(../images/background/mobile/mobile-bg-bottom@1x.png);
+  background-position: top 0 left 0, top 0 left 0, bottom 216.4px left 0;
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-size: auto, contain, contain;
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: url(../images/background/mobile/hero-mobile-donut@2x.png),
+      url(../images/background/mobile/mobile-bg-top@2x.png),
+      url(../images/background/mobile/mobile-bg-bottom@2x.png);
+  }
+  @media screen and (min-width: 768px) {
+    background-image: url(../images/background/tablet/hero-tablet-donut@1x.png),
+      url(../images/background/tablet/tablet-bg-top@1x.png),
+      url(../images/background/tablet/tablet-bg-bottom@1x.png);
+    background-position: top 0 left 254px, top 0 left 0, bottom 63.01px left 0;
+    background-repeat: no-repeat, no-repeat, no-repeat;
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: url(../images/background/tablet/hero-tablet-donut@2x.png),
+        url(../images/background/tablet/tablet-bg-top@2x.png),
+        url(../images/background/tablet/tablet-bg-bottom@2x.png);
+    }
+  }
+  @media screen and (min-width: 1280px) {
+    background-image: url(../images/background/desktop/hero-desktop-donut@1x.png),
+      url(../images/background/desktop/desktop-bg-top@1x.png),
+      url(../images/background/desktop/desktop-bg-bottom@1x.png);
+    background-position: top 0 right 0, top 0 left 0, bottom -30px left 0;
+    background-repeat: no-repeat, no-repeat, no-repeat;
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: url(../images/background/desktop/hero-desktop-donut@2x.png),
+        url(../images/background/desktop/desktop-bg-top@2x.png),
+        url(../images/background/desktop/desktop-bg-bottom@2x.png);
+    }
+  }
 }
