--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -2,7 +2,7 @@ body {
   height: 3526px;
   padding-left: 5px;
   padding-right: 5px;
-  background-color: var(--bg-color);
+  background-color: #fffff9;
   background-image: url(../images/background/mobile/hero-mobile-donut@1x.png),
     url(../images/background/mobile/mobile-bg-top@1x.png),
     url(../images/background/mobile/mobile-bg-bottom@1x.png);
