добавляет ховер кнопке

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -37,8 +37,7 @@
 
     .hero__button:hover,
     .hero__button:focus {
-        background-color: var(--hover-color);
-        color: var(--text-color);
+        background-color: #674D40;
     }
 
     .hero_social-list {
