--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -9,5 +9,12 @@
   text-align: center;
   color: var(--button-text-color);
   background-color: var(--button-background-color);
+  border: 1px solid var(--button-background-color);
   border-radius: 25px;
+
+  &:focus,
+  &:hover {
+    color: var(--button-background-color);
+    background-color: var(--button-text-color);
+  }
 }
