Добавляет разметку и стили в секцию Program

--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -12,9 +12,12 @@
            <li class="program__item">> Photoshoot by professional photographer</li>
            <li class="program__item">> Secret receipt of cooking from Eva</li>
            <li class="program__item">> All products are included in the price</li>
-     
         </ul>
-
+        <p class="program__text--hidden" >Come with your dear people and friends
+        and you will spend an unforgettable time and
+         will become a real professional
+        in donuts cooking! </p>
+        
         <button class="button">Read more</button>
     </div>
 
