--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -9,13 +9,32 @@ body {
   padding: 0 15px;
   margin: 0 auto;
 
-  @media (min-width: $tablet) {
+  @media screen and (min-width: $tablet) {
     width: $tablet;
   }
   @media (min-width: $pc) {
     width: $pc;
   }
 }
+
+
+// .container {
+//   padding: 0 15px;
+//   margin: 0 auto;
+
+//   @media screen and (min-width: $mobile) {
+//     width: $mobile;
+
+//   }
+//   @media screen and (min-width: $tablet) {
+//     width: $tablet;
+//     padding: 0 67px;
+//   }
+//   @media (min-width: $pc) {
+//     width: $pc;
+//     padding: 0 229px;
+//   }
+// }
 
 a {
   text-decoration: none;
