--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -1,19 +1,46 @@
 // .icon{
 //     fill: black;
 // }
+
+.button{
+
+    margin: 0px;
+    padding: 0px;
+    font-family: Caveat Brush;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 3.61;
+background-color: inherit;
+border: none;
+color: #AB816C;
+}
+
 .container-program{
     @media screen and (min-width:$tablet) {
     display: flex;
-    flex-direction: row;
+    // flex-direction: row;
     margin-top: -38px;
     margin-left: -38px;
     }
+    @media screen and (min-width:$pc) {
+    display: flex;
+    // flex-direction: row;
+    margin-top: -38px;
+    margin-left: -38px;
+    }
+
 }
 .container-program__item{
     @media screen and (min-width:$tablet){
     margin-top: 38px;
     margin-left: 38px;
     flex-basis: calc((100% - 38px * 2) / 2);
+    }
+    @media screen and (min-width:$pc) {
+    margin-top: 38px;
+    margin-left: 38px;
+    flex-basis: calc((100% - 38px * 2) / 2) 
     }
 }
 
@@ -24,9 +51,22 @@ font-weight: normal;
 font-size: 24px;
 line-height: 2.7;
 color: #2E2520;
+
 // font-style: italic;
 }
 
+.program__list{
+    // font-family: Montserrat;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 1.25;
+}
+.program__item{
+    &:not(:last-child){
+margin-bottom: 10px;
+    }
+}
 .program-details__list{
 display: flex;
 margin-top: -5px;
@@ -37,14 +77,18 @@ margin: 0px;
 padding: 0px;
 list-style: none;
 
+@media screen and (min-width:$tablet){
+margin-top: -15px;
+margin-left: -15px;
+}
 }
 
 .program-details__item{
 flex-basis: calc((100% - 5px * 2) / 2);
 margin-top: 5px;
 margin-left: 5px;
-width: 142px;
-height: 142px;
+// min-width: 142px;
+min-height: 142px;
 border-radius: 50%;
 padding-top: 49.7px;
 text-align: center;
@@ -52,24 +96,46 @@ background-color: #FEF3E4;
 box-shadow: 0px 4px 4px rgba(171, 129, 108, 0.25);
 
 &:nth-child(2n){
-    transform: translateY(25.08px);
+ transform: translateY(25.08px); 
+    
+}
+&:nth-child(1){
+  margin-bottom: 56.63px;
+    }
+   
+&:nth-child(2){
+margin-bottom: 57.61px;
+ }
+@media screen and (min-width:$tablet){
+    flex-basis: calc((100% - 15px * 2) / 2);
+margin-top: 15px;
+margin-left: 15px;
+// width: 180px;
+// height: 180px;
 }
 }
 
-
+.program__text--hidden{
+    display: none;
+}
 .program-details__title {
+    display: block;
 font-family: Caveat Brush;
 font-style: normal;
 font-weight: normal;
 font-size: 18px;
 line-height: 1.28;
 color: #000000;
+margin-bottom: 12.93px;
 }
 
 .program-details__text{
+display: block;
 font-style: normal;
 font-weight: normal;
 font-size: 14px;
-line-height: 1.21px;
+line-height: 1.21;
 color: #000000;
+margin-top: 0px;
+margin-bottom: 13.59px;
 }
