--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,21 +7,21 @@
       <li class="hero_item">
         <a class="hero_icon" href="">
           <svg>
-            <use href="/images/sprite/sprite.svg#icon-twitter"></use>
+            <use href="/images/sprite/sprite.svg#icon-twitter" rel="noopener noreferrer"></use>
           </svg>
         </a>
       </li>
       <li class="hero_item">
         <a class="hero_icon" href="">
           <svg>
-            <use href="/images/sprite/sprite.svg#icon-instagram"></use>
+            <use href="/images/sprite/sprite.svg#icon-instagram" rel="noopener noreferrer"></use>
           </svg>
         </a>
       </li>
       <li class="hero_item">
         <a class="hero_icon" href="">
           <svg>
-            <use href="/images/sprite/sprite.svg#icon-facebook"></use>
+            <use href="/images/sprite/sprite.svg#icon-facebook" rel="noopener noreferrer"></use>
           </svg>
         </a>
       </li>
