--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,21 +10,21 @@
         <div>
           <ul class="social_list">
             <li class="social_box">
-                <a class="social_link" href="https://twitter.com/">twitter
+                <a class="social_link" href="https://twitter.com/" rel="noopener noreferrer">twitter
                     <svg class="social_icon">
                         <use href=""></use>
                     </svg>
                 </a>
             </li>
             <li class="social_box">
-                <a class="social_link" href="https://www.instagram.com/">instagram
+                <a class="social_link" href="https://www.instagram.com/" rel="noopener noreferrer">instagram
                     <svg class="social_icon">
                         <use href=""></use>
                     </svg>
                 </a>
             </li>
             <li class="social_box">
-                <a class="social_link" href="https://www.facebook.com/">fecebook
+                <a class="social_link" href="https://www.facebook.com/" rel="noopener noreferrer">fecebook
                     <svg class="social_icon">
                         <use href=""></use>
                     </svg>
