Добавляет разметку и стили в contact-form

--- a/src/sass/components/_contact-form.scss
+++ b/src/sass/components/_contact-form.scss
@@ -1,15 +1,20 @@
 .contact__title {
+  margin: 0;
   font-family: Caveat Brush;
   font-style: normal;
+  font-weight: normal;
   font-size: 24px;
   line-height: 2.7;
   text-align: center;
   color: $text;
+  margin-bottom: -35px;
 }
 
 .contact__text {
+  margin: 0;
   font-family: Montserrat;
   font-style: normal;
+  font-weight: normal;
   font-size: 16px;
   line-height: 4.1;
   text-align: center;
@@ -22,9 +27,11 @@
   justify-content: center;
 }
 
-.contact__mail {
-  margin-bottom: 25px;
-  border: none;
+.contact__field {
+  border-bottom: 1px solid $button;
+  border-left: none;
+  border-right: none;
+  border-top: none;
 
   font-family: Montserrat;
   font-style: normal;
@@ -33,17 +40,50 @@
   color: rgba(171, 129, 108, 0.5);
 }
 
+.contact__field--question {
+  margin-top: 25px;
+  margin-bottom: 37px;
+}
+
 .contact__question {
   margin-bottom: 37px;
+  border-bottom: 1px solid $button;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(171, 129, 108, 0.5);
 }
 
 .contact__btn {
   display: flex;
   justify-content: center;
-
-  border-radius: 50%;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: inherit;
+  border-radius: 25px;
   width: 145px;
   height: 40px;
+
+  font-family: Caveat Brush;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 3.61;
+  color: $white;
+
   text-align: center;
   background-color: $button;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: #674d40;
+  }
 }
