--- a/src/partials/contact-form.html
+++ b/src/partials/contact-form.html
@@ -3,11 +3,18 @@
     <h2 class="contact__title">Contact</h2>
     <h3 class="contact__text">We will answer any question!</h3>
     <form class="contact__form">
-      <input type="email" name="mail" class="contact__mail" placeholder="Email" pattern="" />
+      <input
+        type="email"
+        name="mail"
+        class="contact__field"
+        placeholder="Email"
+        pattern="^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}
+        [a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$"
+      />
       <input
         type="text"
         name="question"
-        class="contact__question"
+        class="contact__field contact__field--question"
         placeholder="Type your question"
         pattern="[A-Za-z]"
       />
