Добавляет ховер на соцсети

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -55,7 +55,7 @@
 
     .hero_social-link:hover,
     .hero_social-link:focus {
-        fill: var(--hover-color);
+        fill: #674D40;
     }
 }
 
@@ -125,3 +125,4 @@
         height: 19px;
     }
 }
+
