--- a/src/sass/components/_contact-form.scss
+++ b/src/sass/components/_contact-form.scss
@@ -8,6 +8,12 @@
   text-align: center;
   color: $text;
   margin-bottom: -35px;
+
+  @media screen and (min-width: $pc) {
+    font-size: 36px;
+    line-height: 1.8;
+    margin-bottom: -30px;
+  }
 }
 
 .contact__text {
@@ -19,12 +25,18 @@
   line-height: 4.1;
   text-align: center;
   color: $text;
+
+  @media screen and (min-width: $pc) {
+    font-size: 18px;
+    line-height: 3.6;
+  }
 }
 
 .contact__form {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .contact__field {
@@ -32,12 +44,21 @@
   border-left: none;
   border-right: none;
   border-top: none;
+  width: 265px;
 
   font-family: Montserrat;
   font-style: normal;
   font-size: 16px;
   line-height: 1.25;
   color: rgba(171, 129, 108, 0.5);
+
+  @media screen and (min-width: $tablet) and (max-width: $pc) {
+    width: 410px;
+  }
+
+  @media screen and (min-width: $pc) {
+    width: 430px;
+  }
 }
 
 .contact__field--question {
@@ -85,5 +106,14 @@
   &:hover,
   &:focus {
     background-color: #674d40;
+  }
+
+  @media screen and (min-width: $pc) {
+    font-size: 24px;
+    line-height: 2.7;
+    &:hover,
+    &:focus {
+      background-color: $hover;
+    }
   }
 }
