Добавляет первую картинку в раздел Program

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -10,10 +10,10 @@ body {
   margin: 0 auto;
 
   @media screen and (min-width: $tablet) {
-    width: $tablet;
+    max-width: $tablet;
   }
   @media (min-width: $pc) {
-    width: $pc;
+    max-width: $pc;
   }
 }
 
