Добавляет все изображения для секции Program

--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -6,10 +6,7 @@
         <p class="program__text">Indulge in this immersive sweet treat experience with The Chef Donut Queen in her New York donut shop!</p>
         <ul class="program__list">
             <li class="program__item">
-                <picture>
-                    <source srcset="./images/donut-1.png 1x, ./images/donut-1@2x.png  2x" media="(min-width: 320px)"/>
-                    <img src="./images/donut-1.png" alt="Игорь Демьяненко" width="84.41">
-                </picture>
+                
                 <!-- <picture>
                     <source srcset="./images/desktop/foto1_desktop.jpg 1x, ./images/desktop/foto1@2x_desktop.jpg 2x" media="(min-width: 1200px)"/>
                     <source srcset="./images/tablet/foto1_tablet.jpg 1x, ./images/tablet/foto1@2x_tablet.jpg 2x" media="(min-width: 768px)" />
@@ -36,7 +33,10 @@
         <div class="container-program__item">
         <ul class="program-details__list">
             <li class="program-details__item">
-                
+                <picture class="program-details__img">
+                    <source srcset="./images/donut-1.png 1x, ./images/donut-1@2x.png  2x" media="(min-width: 320px)"/>
+                    <img src="./images/donut-1.png" alt="Игорь Демьяненко" width="76.52">
+                </picture>
                 <span class="program-details__title">Type of the event</span>
                 <p class="program-details__text">Cooking classes</p>
                 <svg class="icon" width="19.42" height="18.01">
@@ -45,6 +45,11 @@
            
            </li>
             <li class="program-details__item">
+                <picture class="program-details__img">
+                    <source srcset="./images/donut-2.png 1x, ./images/donut-2@2x.png  2x" media="(min-width: 320px)"/>
+                    <img src="./images/donut-2.png" alt="Игорь Демьяненко" width="
+                    64.86">
+                </picture>
                 <span class="program-details__title">Number of guests</span>
                 <p class="program-details__text">1 to 20</p>
                 <svg class="icon" width="20.32" height="18.26">
@@ -52,6 +57,10 @@
                 </svg>
            </li>
             <li class="program-details__item">
+                <picture class="program-details__img">
+                    <source srcset="./images/donut-3.png 1x, ./images/donut-3@2x.png  2x" media="(min-width: 320px)"/>
+                    <img src="./images/donut-3.png" alt="Игорь Демьяненко" width="69.42">
+                </picture>
                 <span class="program-details__title">Time of the event</span>
                 <p class="program-details__text">18:30 (2.5 hours)</p>
                 <svg class="icon" width="19.72" height="19.72">
@@ -59,6 +68,10 @@
                 </svg>
             </li>
             <li class="program-details__item">
+                <picture class="program-details__img">
+                    <source srcset="./images/donut-4.png 1x, ./images/donut-4@2x.png  2x" media="(min-width: 320px)"/>
+                    <img src="./images/donut-4.png" alt="Игорь Демьяненко" width="65.48">
+                </picture>
                 <span class="program-details__title">The host speaks</span>
                 <p class="program-details__text">English, French</p>
                 <svg class="icon" width="24.83" height="16.8">
