--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,25 @@
-
+<footer>
+  <ul class="social-icons">
+    <li class="social-icons__item">
+      <a href="" class="social-icons__link" target="_blank" rel="noopener noreferrer">
+        <svg class="social-icons__svg social-icons__svg--twitter">
+          <use href="./images/symbol-defs.svg#icon-twitter"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="social-icons__item">
+      <a href="" class="social-icons__link" target="_blank" rel="noopener noreferrer">
+        <svg class="social-icons__svg social-icons__svg--instagram" width="15" height="15">
+          <use href="./images/symbol-defs.svg#icon-instagram"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="social-icons__item">
+      <a href="" class="social-icons__link" target="_blank" rel="noopener noreferrer">
+        <svg class="social-icons__svg social-icons__svg--facebook">
+          <use href="./images/symbol-defs.svg#icon-facebook"></use>
+        </svg>
+      </a>
+    </li>
+  </ul>
+</footer>
