Добавляет стили к секции about
-стилизует кнопку read-more
-добавляет в HTMLразметку скрипт, чтобы кнопка  read-more открывалась и закрывалась
-добавляет sass-поршал read-more
- _common.scss в body стили меняет на переменные

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,17 +1,15 @@
 body {
-  background-color: #ffffff;
+  background-color: var(--white-color);
+  font-family: var(--text-font), sans-serif;
 
-  color: #2e2520;
+  color: var(--primary-text-color);
   font-style: normal;
-  font-weight: 400;
-
-  font-family: Montserrat, sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
 
   @media screen and (min-width: 1280px) {
-    background-color: #fffff9;
+    background-color: var(--background-color);
     font-size: 18px;
     line-height: 1.22;
   }
