--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -1,5 +1,6 @@
 .title {
-  font-family: Caveat Brush;
+  font-family: CaveatBrush;
+  color: var(--primary-text-color);
   font-size: 24px;
   line-height: 2.71;
 
