--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import './base/container';
 @import './components/title';
 @import './components/button';
+@import './components/btn-read-more';
 @import './components/main-nav';
 @import './components/mobile-menu';
 @import './components/contact-form';
