--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
 :root {
-  --text-font: "Montserrat";
-  --title-font: "Caveat Brush";
+  --text-font: 'Montserrat';
+  --title-font: 'Caveat Brush';
 
   --container-width: 860px;
 
@@ -12,7 +12,7 @@
   --button-text-border-color: #000000;
   --button-background-color: #ab816c;
   --base-icon-color: #2e2520;
-  --program-icon-color: #674d40;
+  --program-icon-color: #c7c6c5;
   --location-icon-color: #000000;
   --star-icon-color: #ab816c;
   --form-lines-color: #ab816c;
