--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,19 +1,41 @@
 <section class="about">
-      <div class="container">
-        <h2 class="about__title title">About us</h2>
-        <p class="about__text">
-          Oh My Donut is the shop which adores tasty deserts and spend hours to create sophisticated
-          donuts which will save the world!
-        </p>
-        <p class="about__text">
-          Eva has been baking since she was six years old and over the last 49 years, she has
-          created hundreds of cakes for weddings and has baked for many celebrities. Eva and our
-          shop have received multiple awards & recognition for excellence.
-        </p>
-        <p class="about__text">
-          We are going to teach you how to cook with passion and sparkles in your eyes! We love what
-          we do and believe you will enjoy our cooking atmosphere!
-        </p>
-        <button class="about__btn">Read more</button>
-      </div>
-    </section>
+  <div class="container">
+    <h2 class="about__title title">About us</h2>
+    <p class="about__text">
+      Oh My Donut is the shop which adores tasty deserts and spend hours to create sophisticated
+      donuts which will save the world!
+    </p>
+    <p class="about__text">
+      Eva has been baking since she was six years old and over the last 49 years, she has created
+      hundreds of cakes for weddings and has baked for many celebrities. Eva and our shop have
+      received multiple awards & recognition for
+      <span id="dots">excellence.</span>
+    </p>
+    <span id="more">
+      <p class="about__text">
+        We are going to teach you how to cook with passion and sparkles in your eyes! We love what
+        we do and believe you will enjoy our cooking atmosphere!
+      </p></span
+    >
+    <button class="btn__read-more" type="button" onclick="myFunction()" id="myBtn">
+      Read more
+    </button>
+    <script>
+      function myFunction() {
+        var dots = document.getElementById('dots');
+        var moreText = document.getElementById('more');
+        var btnText = document.getElementById('myBtn');
+
+        if (dots.style.display === 'none') {
+          dots.style.display = 'inline';
+          btnText.innerHTML = 'Read more';
+          moreText.style.display = 'none';
+        } else {
+          dots.style.display = 'none';
+          btnText.innerHTML = 'Less';
+          moreText.style.display = 'inline';
+        }
+      }
+    </script>
+  </div>
+</section>
