Корректирует паддинги контейнера, Добавляет стили для tablet в секцию Program

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -11,9 +11,11 @@ body {
 
   @media screen and (min-width: $tablet) {
     max-width: $tablet;
+    padding: 0 67px;
   }
   @media (min-width: $pc) {
     max-width: $pc;
+      padding: 0 229px;
   }
 }
 
