--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -2,9 +2,26 @@
 //     fill: black;
 // }
 
+.program__title{
+    font-family: Caveat Brush;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 2.7;
+    color: #2E2520;
+    margin: 0px;
+    padding: 0px;
+      
+    }
+
+
+    .program__text{
+        margin-bottom: 10px;
+        margin-top: 0px;
+    }
 .button{
 
-    margin: 0px;
+    margin-bottom: 33px;
     padding: 0px;
     font-family: Caveat Brush;
 font-style: normal;
@@ -19,7 +36,8 @@ color: #AB816C;
 .container-program{
     @media screen and (min-width:$tablet) {
     display: flex;
-    // flex-direction: row;
+    flex-wrap: wrap;
+    flex-direction: row;
     margin-top: -38px;
     margin-left: -38px;
     }
@@ -33,6 +51,7 @@ color: #AB816C;
 }
 .container-program__item{
     @media screen and (min-width:$tablet){
+   
     margin-top: 38px;
     margin-left: 38px;
     flex-basis: calc((100% - 38px * 2) / 2);
@@ -43,17 +62,12 @@ color: #AB816C;
     flex-basis: calc((100% - 38px * 2) / 2) 
     }
 }
-
-.program__title{
-font-family: Caveat Brush;
-font-style: normal;
-font-weight: normal;
-font-size: 24px;
-line-height: 2.7;
-color: #2E2520;
-
-// font-style: italic;
+@media screen and (min-width:$tablet){
+    .container-program__item:nth-child(2){
+        padding-top: 33.92px;
+    }
 }
+
 
 .program__list{
     // font-family: Montserrat;
