--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,10 @@
+@charset "UTF-8";
+/*
+ * Главный файл стилей.
+ * Все паршалы подключаются сюда.
+ */
 .example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.5;
   background-color: #fff;
   color: #424242;
@@ -20,8 +24,7 @@
 
 .example .background {
   height: 240px;
-  // Путь к изображениям из SASS-файла всегда такой, как из папки css
-  background-image: url('../src/images/demo.jpg');
+  background-image: url("../src/images/demo.jpg");
   background-size: cover;
   background-position: center;
-}
+}/*# sourceMappingURL=main.css.map */
