Tablet version and mobile without image

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -3,26 +3,48 @@
   padding: 0;
   width: $mobile;
   height: 460.51px;
-  background: url(/images/bg-1.png);
+  background: url(/images/bg-1-mobile.png);
+  @media screen and (min-width: $tablet) {
+    width: $tablet;
+    display: flex;
+    background: url(/images/bg-1.png);
+  }
+}
+
+.image__donuts {
+  position: absolute;
+  top: -51px;
+  left: -12px;
+  @media screen and (min-width: $tablet) {
+    position: absolute;
+    top: -35px;
+    left: 254px;
+  }
 }
 .hero__title {
+  position: absolute;
+  left: 48px;
+  top: 83px;
   font-family: Caveat Brush;
   font-style: normal;
   font-weight: normal;
+  text-transform: unset;
   font-size: 30px;
   line-height: 1.26;
 
   text-align: center;
-  padding-top: 83px;
-  margin: 0%;
+  margin: 0;
   letter-spacing: inherit;
 
-  background-image: url(/images/pic-donuts.png);
-  background-position: inherit;
-  background-repeat: no-repeat;
-
   color: $text;
+  @media screen and (min-width: $tablet) {
+    position: absolute;
+    left: 68px;
+    top: 80px;
+    text-align: left;
+  }
 }
+
 .hero__subtitle {
   font-family: Montserrat;
   font-style: normal;
@@ -30,9 +52,17 @@
   font-size: 16px;
   line-height: 1.25;
   margin-top: 3px;
+  margin-bottom: 0px;
+  padding-top: 162px;
   text-align: center;
 
   color: $text;
+  @media screen and (min-width: $tablet) {
+    position: absolute;
+    left: 68px;
+    top: 159px;
+    padding: 0px;
+  }
 }
 
 .button__register {
@@ -67,13 +97,28 @@
     color: $milk;
     background-color: $hover;
   }
+  @media screen and (min-width: $tablet) {
+    position: absolute;
+    left: 68px;
+    top: 183px;
+    margin-top: 26px;
+  }
 }
 
 .socials {
-  margin-top: 37px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  left: 129px;
+  top: 276px;
+  margin-top: 45px;
+  width: 19px;
+  height: 19px;
+  @media screen and (min-width: $tablet) {
+    position: absolute;
+    left: 95px;
+    top: 250px;
+    margin-top: 31px;
+  }
 }
 .social__item {
   &:not(:last-child) {
